dark mode fix

--- a/content/posts/nametags/registration-form.css
+++ b/content/posts/nametags/registration-form.css
@@ -43,6 +43,9 @@
 .form-input-container input {
 	border: none;
 }
+.dark .form-input-container input {
+	color: white;
+}
 .form-input-container input:focus {
 	border: none;
 }
